 - #32 impl for service : POST wiki/recruitment/info/vote
 - #31 impl for service : POST wiki/recruitment/info/invalidate
 - #29 impl for service : POST wiki/recruitment/info/add
 - #27 impl for service : POST register/company/companies
 - #23 impl for service : POST auth/privileges/remove
 - #23 impl for service : POST auth/privileges/add
 - #23 impl for service : GET auth/privileges/{userId}
 - #19 impl user repository
 - #19 rename core module folder
 - #19 impl sign in with google (OAuth 2.0 Bearer Token), secure APIs
 - #16 impl for service : POST register/company/invalidate
 - #3 config springfox swagger api-docs
 - #8 clean maven structure, run test specs with each build
 - #2 groovy spock tests config
 - #1 mybatis config