@@ -1,0 +1,37 @@
+package com.agh.hydra.wiki.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import javax.validation.Valid;
+
+@Setter
+@Getter
+@NoArgsConstructor
+@AllArgsConstructor
+public class RecruitmentInfoDetailsEntity extends RecruitmentInfoEntity {
+
+    /**
+     * Username
+     */
+    @Valid
+    private String username;
+
+    /**
+     * User image URL address
+     */
+    private String userImageUrl;
+
+    /**
+     * Company name
+     */
+    @Valid
+    private String companyName;
+
+    /**
+     * User reliability ratio
+     */
+    private Double userReliabilityRatio;
+}
