@@ -3,20 +3,28 @@ package com.agh.hydra.wiki.impl;
 import com.agh.hydra.api.register.service.IPrivilegeService;
 import com.agh.hydra.common.model.UserId;
 import com.agh.hydra.common.model.ValueObject;
+import com.agh.hydra.common.util.PageableUtils;
 import com.agh.hydra.wiki.dao.WikiRepository;
 import com.agh.hydra.wiki.entity.RecruitmentInfoEntity;
 import com.agh.hydra.wiki.mapper.WikiMapper;
+import com.agh.hydra.wiki.model.InformationDetails;
+import com.agh.hydra.wiki.model.RecruitmentInfoFilter;
 import com.agh.hydra.wiki.request.BaseInformationRequest;
 import com.agh.hydra.wiki.request.CreateRecruitmentInfoRequest;
+import com.agh.hydra.wiki.request.RecruitmentInformationFilterRequest;
 import com.agh.hydra.wiki.request.VoteRequest;
 import com.agh.hydra.wiki.service.IWikiService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
+import java.util.List;
 
 import static com.agh.hydra.common.model.FunctionalPrivilege.FN_PRV_CREATE_INFORMATION;
 import static com.agh.hydra.common.model.FunctionalPrivilege.FN_PRV_INVALIDATE_RECRUITMENT_INFO;
@@ -54,6 +62,18 @@ public class WikiService implements IWikiService {
     @Override
     public void voteRecruitmentInformation(@Valid @NotNull VoteRequest request, @Valid @NotNull UserId userId) {
         wikiRepository.updateInformationVote(getValue(userId), getValue(request.getInformationId()), getVote(request));
+    }
+
+    @Override
+    public Page<InformationDetails> getRecruitmentInformation(@Valid RecruitmentInformationFilterRequest request,
+                                                              @NotNull Pageable pageable) {
+        RecruitmentInfoFilter filter = WikiMapper.INSTANCE.mapFilterRequest(request);
+        PageableUtils.setPageableParams(filter, pageable);
+
+        List<InformationDetails> informationDetails = wikiRepository.getRecruitmentInformation(filter);
+        long total = wikiRepository.getInformationCount(filter);
+
+        return new PageImpl<>(informationDetails, pageable, total);
     }
 
     private String getVote(@Valid @NotNull VoteRequest request) {
